Revert "Hindrer overstyring til uttak av bare en fri utsettelse (#6355)"
This reverts commit f0da242146fd6aa106c697f6cd4736037d77cf7c.